@@ -48,6 +48,10 @@ debhelper (11.4) UNRELEASED; urgency=medium
   * dh_installdocs.1: Fix typo.
   * dh_link.1: Ditto.
 
+  [ Nicholas Guriev ]
+  * cmake.pm, autoconf.pm: honor QUIET setting (closes: #907738).
+  * Dh_Lib.pm: use terse build option to set QUIET setting (closes: #907595).
+
  -- Niels Thykier <niels@thykier.net>  Wed, 01 Aug 2018 10:27:22 +0000
 
 debhelper (11.3.5) unstable; urgency=medium
